[package]
name = "kvs"
version = "0.1.0"
authors = ["wangwangwar <wangwangwar@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.0.8"
walkdir = "2.2.8"

[dependencies]
clap = {version = "~2.33.0", features = ["yaml"]}