[package]
name = "kvs"
version = "0.1.0"
authors = ["wangwangwar <wangwangwar@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.0.8"
walkdir = "2.2.8"

[dependencies]
structopt = "0.2.16"
serde = "1.0.92"
bincode = "1.1.4"
libc = "0.2"
byteorder = "1.3.2"